--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 quarkus.dynamodb.endpoint-url=http://localhost:8000
-quarkus.dynamodb.region=us-west-1
+quarkus.dynamodb.region=eu-west-1
 quarkus.http.port=8080
 quarkus.http.cors=true
