--- a/build.gradle
+++ b/build.gradle
@@ -35,14 +35,20 @@ dependencies {
 
     testImplementation("io.quarkus:quarkus-junit5")
     testImplementation 'org.mockito:mockito-junit-jupiter:4.8.0'
-    testImplementation 'org.mockito:mockito-core:4.6.1'                // Mockito for mocking
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
+    testImplementation 'org.mockito:mockito-core:4.6.1'
+
+    testImplementation 'io.rest-assured:rest-assured:5.1.1'     // REST Assured for API testing
 
     // AWS SDK for DynamoDB (for mocking DynamoDB client in tests)
     testImplementation 'software.amazon.awssdk:dynamodb:2.17.110'
+    testImplementation 'com.amazonaws:dynamodb-local:1.11.534'
 
     // Google Truth for assertions in tests
     testImplementation 'com.google.truth:truth:1.4.4'
 
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.7.2'
 }
 
 
